fixed divider line widths on mobile view and added a tags to portfolio section

--- a/dev/styles/partials/_portfolio.scss
+++ b/dev/styles/partials/_portfolio.scss
@@ -60,7 +60,7 @@
         }
         .portfolioItem.item::before {
             content: "";
-            width: 100%;
+            width: 90%;
             height: 3px;
             border-bottom: 2px double $accentGreenFour;
             border-top: 2px solid $accentGreenFour;
