--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -489,7 +489,7 @@ header.wrapper {
       margin: 0; }
     .tabletPortfolio .portfolioItem.item::before {
       content: "";
-      width: 100%;
+      width: 90%;
       height: 3px;
       border-bottom: 2px double rgba(58, 218, 178, 0.5);
       border-top: 2px solid rgba(58, 218, 178, 0.5);
